###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name="spacemouse"
)

bazel_dep(name="rules_cc", version="0.2.9")
bazel_dep(name = "rules_python", version = "1.2.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# Add LCM dependency through Drake
drake_dep_repositories = use_extension(
    "@drake//tools/workspace:default.bzl",
    "drake_dep_repositories",
)
use_repo(drake_dep_repositories, "lcm", "gflags")
bazel_dep(name = "drake")

DRAKE_VERSION = "v1.42.0"
DRAKE_CHECKSUM = "d860c15f50397c8a946fcc79e0a58a91ebc56f2189ef9edfcac929aa04157f8b"
archive_override(
    module_name = "drake",
    urls = [x.format(DRAKE_VERSION) for x in [
        "https://github.com/RobotLocomotion/drake/archive/{}.tar.gz",
    ]],
    sha256 = DRAKE_CHECKSUM,
    strip_prefix = "drake-{}".format(DRAKE_VERSION.lstrip("v")),
)

# Add libspnav dependency
libspnav_extension = use_extension("@spacemouse//tools/libspacenav:repository.bzl", "libspnav_extension")
use_repo(libspnav_extension, "libspnav")
