###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "spacemouse",
)

# If you don't want to support building on macOS, you may remove the next line.
# Note that it must appear prior to loading "rules_cc", per the documentation:
#  https://github.com/bazelbuild/apple_support?tab=readme-ov-file#bazel-7-setup
bazel_dep(name = "apple_support", version = "2.3.0")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "lcm", version = "1.5.2")
bazel_dep(name = "gflags", version = "2.2.2.bcr.1")

# Add LCM dependency through Drake
drake_dep_repositories = use_extension(
    "@drake//tools/workspace:default.bzl",
    "drake_dep_repositories",
)
use_repo(drake_dep_repositories, "drake_models")

bazel_dep(name = "drake")

DRAKE_VERSION = "v1.51.1"
DRAKE_CHECKSUM = "40cb4d0e3d378ba67c21aca8cc1396399774b333b12d0030f5fbe4ddff1dc786"

archive_override(
    module_name = "drake",
    sha256 = DRAKE_CHECKSUM,
    strip_prefix = "drake-{}".format(DRAKE_VERSION.lstrip("v")),
    urls = [x.format(DRAKE_VERSION) for x in [
        "https://github.com/RobotLocomotion/drake/archive/{}.tar.gz",
    ]],
)

# Add libspnav dependency
libspnav_extension = use_extension("@spacemouse//tools/libspacenav:repository.bzl", "libspnav_extension")
use_repo(libspnav_extension, "libspnav")

drake_models_extension = use_extension("@spacemouse//tools/drake_models:repository.bzl", "drake_models_extension")
use_repo(drake_models_extension, "my_drake_models")

override_repo(
    drake_dep_repositories,
    drake_models = "my_drake_models",
)

x11_extension = use_extension("@spacemouse//tools/x11:repository.bzl", "x11_extension")
use_repo(x11_extension, "X11")

bazel_dep(name = "robotiq-driver")
git_override(
    module_name = "robotiq-driver",
    remote = "https://github.com/DAIRLab/robotiq_gripper.git",
    commit = "4832e3a39e2fa32a7deb3b682bb9f3cb835f1b09",
)
