package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common",
    hdrs = ["common.h"],
    deps = [
        "@drake//common:find_runfiles",
        "@drake//common/yaml:yaml_io",
    ],
)

cc_binary(
    name = "run_driver",
    srcs = ["run_driver.cc"],
    deps = [
        "//core:common",
        "//configs:spacemouse_settings",
        "//lcmtypes:lcmt_robot",
        "@libspnav//:libspnav",
        "@robotiq-driver//:robotiq_gripper",
        "@lcm//:lcm",
        "@gflags",
        "@drake//common/yaml:yaml_io",
    ],
    data = [
        "//configs:setting_yaml_file",
    ]
)

cc_binary(
    name = "run_franka_driver",
    srcs = ["run_franka_driver.cc"],
    deps = [
        "//core:common",
        "//configs:spacemouse_settings",
        "//lcmtypes:lcmt_robot",
        "@libspnav//:libspnav",
        "@robotiq-driver//:robotiq_gripper",
        "@lcm//:lcm",
        "@gflags",
        "@drake//common:find_resource",
        "@drake//common/yaml:yaml_io",
        "@drake//math:geometric_transform",
        "@drake//math:wrap_to",
        "@drake//multibody/plant:plant",
        "@drake//multibody/parsing:parsing",
        "@drake//systems/framework:framework",
        "@drake//lcmtypes:lcmtypes_drake_cc"

    ],
    data = [
        "//configs:setting_yaml_file",
        "@drake_models//:franka_description",
    ]
)