package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common",
    hdrs = ["common.h"],
    deps = [
        "@drake//common:find_runfiles",
    ],
)

cc_library(
    name = "spacemouse_state_publisher",
    srcs = ["spacemouse_state_publisher.cc"],
    hdrs = ["spacemouse_state_publisher.h"],
    deps = [
        "//configs:spacemouse_settings",
        "//lcmtypes:lcmt_robot",
        "@libspnav//:libspnav",
        "@lcm//:lcm",
    ],
)

cc_binary(
    name = "run_ur_driver",
    srcs = ["run_ur_driver.cc"],
    deps = [
        ":spacemouse_state_publisher",
        "//configs:spacemouse_settings",
        "@robotiq-driver//lcmtypes:lcmt_robotiq",
        "@lcm//:lcm",
        "@gflags",
        "@drake//common/yaml:yaml_io",
    ],
    data = [
        "//configs:setting_yaml_file",
    ]
)

cc_binary(
    name = "run_franka_driver",
    srcs = ["run_franka_driver.cc"],
    deps = [
        "//core:common",
        ":spacemouse_state_publisher",
        "//configs:spacemouse_settings",
        "//lcmtypes:lcmt_robot",
        "@lcm//:lcm",
        "@gflags",
        "@drake//common/yaml:yaml_io",
        "@drake//lcmtypes:lcmtypes_drake_cc",
    ],
    data = [
        "//configs:setting_yaml_file",
    ]
)
