load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
configure_make(
    name = "libspnav",
    lib_source = "@libspnav//:all_srcs",
    configure_in_place = True,
    out_static_libs = ["libspnav.a"],
    out_shared_libs = select({
        "@platforms//os:macos": ["libspnav.dylib"],
        "@platforms//os:linux": ["libspnav.so"],
    }),
    env = {
        "LDFLAGS": "-shared -fPIC",
        "CFLAGS": "-fPIC",
    },
    copts = ["-isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk"],
    linkopts = ["-lX11"],
    visibility = ["//visibility:public"],
)
